...
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/welcome_container"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
...
