<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/global_menu">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_100"
            android:title="Profile"/>

        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_dashboard_100"
            android:title="Dashboard"/>

        <item android:id="@+id/nav_publicGroups"
            android:icon="@drawable/ic_baseline_person_search_100"
            android:title="Public Groups"/>

        <item android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_baseline_schedule_100"
            android:title="Schedule"/>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_100"
            android:title="Settings"/>

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_assignment_return_100"
            android:title="Logout"/>
    </group>
</menu>