...
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PublicGroups">


    <Spinner
        android:id="@+id/spinnerSortBy"
        android:layout_width="333dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:background="@color/teal_darker"
        android:contentDescription="Sort By"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewGroupSearch" />

    <SearchView
        android:id="@+id/searchViewGroupSearch"
        android:layout_width="333dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
...
